--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
